<resources>
    <string name="app_name">TriviaApp</string>
    <string name="title">Trivia</string>
    <string name="true_title">True</string>
    <string name="false_title">False</string>
    <string name="previous_button">previous_button</string>
    <string name="next_button">next_button</string>
    <string name="counter_question">0 out of 100</string>
    <string name="correct_ans">That\'s correct</string>
    <string name="incorrect_ans">that\'s incorrect</string>
    <string name="score">0/913</string>
</resources>
